name:                imageserver
version:             0.1.0.0
synopsis:            Image server for CS4012
description:         Image server for CS4012
homepage:            https://github.com/clairegregg/haskell-image-web-dev#readme
license:             BSD3
license-file:        LICENSE
author:              Claire Gregg
maintainer:          cgregg@tcd.ie
copyright:           2023 Claire Gregg
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable imageserver
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Render, Shapes
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,JuicyPixels
